--- a/less/variables.less
+++ b/less/variables.less
@@ -1,9 +1,10 @@
 
 /* Specify basic styles */
 @font       : 'Roboto', sans-serif;
-@body-bg   : #eee;
+@body-bg    : #eee;
 @text-color : #333;
 @font-size  : 14px;
+@navbar-bg  : #009688;
 
 //== Colors
 //
