--- a/less/modules/inputs_buttons.less
+++ b/less/modules/inputs_buttons.less
@@ -10,7 +10,7 @@ display: none;
 }
 .input-group .btn-success {
 background: transparent !important;
-color: #4caf50;
+color: @brand-success;
 font-weight: 700;
 font-size: 16px;
 text-transform: uppercase;
@@ -19,13 +19,13 @@ transition:color 1s ease;
 .input-group .btn-success:hover,
 .input-group .btn-success:focus {
 background: transparent !important;
-color: #3d8b40;
+color: darken(@brand-success, 3%);
 -webkit-box-shadow: none;
   box-shadow: none;
 }
 .input-group .btn-primary {
 background: transparent !important;
-color: #2196f3;
+color: @brand-primary;
 font-weight: 700;
 font-size: 16px;
 text-transform: uppercase;
@@ -34,7 +34,7 @@ transition:color 1s ease;
 .input-group .btn-primary:hover,
 .input-group .btn-primary:focus {
 background: transparent !important;
-color: #0c7cd5;
+color: darken(@brand-primary, 3%);
 -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -49,7 +49,7 @@ font-size: 18px;
     font-size: 14px;
     line-height: 1.42857143;
     color: #555;
-    background-color: #fff;
+    background-color: transparent;
 	border-top: 0px;
     background-image: none;
     border: 0px solid transparent;
@@ -59,7 +59,7 @@ font-size: 18px;
 	box-shadow: none;
 }
 .form-control:focus {
-    border-color: #66afe9;
+    border-color: @navbar-bg;
     outline: 0;
     -webkit-box-shadow: none;
 	-moz-box-shadow: none;
