--- a/less/modules/labels.less
+++ b/less/modules/labels.less
@@ -1,12 +1,12 @@
 /* Labels */
 .label-success {
-background-color: #fff;
-color: #26A69A;
+background-color: @online-status-bg;
+color: @online-status-color;
 padding-top: 5px;
 }
 .label-danger {
-background-color: #fff;
-color: #e51c23;
+background-color: @offline-status-bg;
+color: @offline-status-color;
 padding-top: 5px;
 }
 .label-primary {
