--- a/less/modules/minecraftmarket.less
+++ b/less/modules/minecraftmarket.less
@@ -13,9 +13,6 @@
   float: none;
   text-align: center;
 }
-.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
-    background-color: #26A69A;
-}
 .frontpage-splash {
   background-image: none !important;
 }
@@ -40,6 +37,6 @@
     font-size: 1.5em;
     font-weight: 500;
     text-shadow: none;
-    color: #26A69A;
+    color: @logo-color;
     padding-top: 0;
 }
