--- a/less/modules/panels.less
+++ b/less/modules/panels.less
@@ -6,9 +6,9 @@
 	border-radius: 2px;
 }
 .panel .panel-heading {
-  color: #fff;
+  color: @panel-header-color;
   text-transform: uppercase;
-  background-color: #26A69A;
+  background-color: @panel-header;
   font-weight: 500 !important;
   border: 0;
 }
