--- a/less/variables.less
+++ b/less/variables.less
@@ -1,10 +1,26 @@
 
 /* Specify basic styles */
-@font       : 'Roboto', sans-serif;
-@body-bg    : #eee;
-@text-color : #333;
-@font-size  : 14px;
+@font: 'Roboto', sans-serif;
+@body-bg: #eee;
+@text-color: #333;
+@font-size: 14px;
+@logo-color: @navbar-bg;
 @navbar-bg  : #009688;
+@panel-header : #26A69A;
+@panel-header-color: #fff;
+@online-status-bg: #fff;
+@online-status-color: #26A69A;
+@offline-status-bg: #fff;
+@offline-status-color: #e51c23;
+@dropdown-hover-bg: #009688;
+@dropdown-hover-color: #fff;
+@dropdown-menu-bg: #fff;
+@progress: @navbar-bg;
+@modal-header-bg: @navbar-bg;
+@modal-header-color: #fff;
+@form-control: #ccc;
+@form-control-focus: @navbar-bg;
+@form-control-color: #555;
 
 //== Colors
 //
@@ -32,7 +48,7 @@
 @btn-font-weight:                normal;
 
 @btn-default-color:              #fff;
-@btn-default-bg:                 #009688;
+@btn-default-bg:                 @navbar-bg;
 @btn-default-border:             @btn-default-bg;
 
 @btn-primary-color:              #fff;
