--- a/less/modules/dropdowns.less
+++ b/less/modules/dropdowns.less
@@ -2,21 +2,23 @@
 .dropdown-menu > .active > a,
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
-  color: #ffffff;
+  color: @dropdown-hover-color;
   text-decoration: none;
   outline: 0;
-  background-color: #51ca59;
+  background-color: @dropdown-hover-bg;
 }
 .dropdown-menu {
-background: #fff;
+background: @dropdown-menu-bg;
 box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 border: 0px transparent;
 border-radius: 0px;
 }
 .dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
-background-color: #009688;
-color: #fff;
+background-color: @dropdown-hover-bg;
+color: @dropdown-hover-color;
 }
-.dropdown-menu > li > a:hover {
-    color: #fff;
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+    color: @dropdown-hover-color;
+    background-color: @dropdown-hover-bg;
 }
