--- a/less/modules/modals.less
+++ b/less/modules/modals.less
@@ -6,11 +6,11 @@
 }
 .modal-header {
 padding: 15px;
-background: #009688;
+background: @modal-header-bg;
 -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
 -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
 border-bottom: none !important;
-color: #fff;
+color: @modal-header-color;
 box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
 min-height: 16.42857143px;
 }
