--- a/materialcraft.css
+++ b/materialcraft.css
@@ -431,7 +431,7 @@ fieldset[disabled] .btn-danger.active {
 .input-group .btn-success:hover,
 .input-group .btn-success:focus {
   background: transparent !important;
-  color: #3d8b40;
+  color: #47a44b;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -446,7 +446,7 @@ fieldset[disabled] .btn-danger.active {
 .input-group .btn-primary:hover,
 .input-group .btn-primary:focus {
   background: transparent !important;
-  color: #0c7cd5;
+  color: #128ff2;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -461,7 +461,7 @@ fieldset[disabled] .btn-danger.active {
   font-size: 14px;
   line-height: 1.42857143;
   color: #555;
-  background-color: #fff;
+  background-color: transparent;
   border-top: 0px;
   background-image: none;
   border: 0px solid transparent;
@@ -471,7 +471,7 @@ fieldset[disabled] .btn-danger.active {
   box-shadow: none;
 }
 .form-control:focus {
-  border-color: #66afe9;
+  border-color: #009688;
   outline: 0;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -665,12 +665,12 @@ input[type="checkbox"]:disabled:checked:after,
 }
 /* Labels */
 .label-success {
-  background-color: #fff;
-  color: #26A69A;
+  background-color: #ffffff;
+  color: #26a69a;
   padding-top: 5px;
 }
 .label-danger {
-  background-color: #fff;
+  background-color: #ffffff;
   color: #e51c23;
   padding-top: 5px;
 }
@@ -693,7 +693,7 @@ input[type="checkbox"]:disabled:checked:after,
   -webkit-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   -moz-box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   border-bottom: none !important;
-  color: #fff;
+  color: #ffffff;
   box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   min-height: 16.42857143px;
 }
@@ -717,9 +717,9 @@ input[type="checkbox"]:disabled:checked:after,
   border-radius: 2px;
 }
 .panel .panel-heading {
-  color: #fff;
+  color: #ffffff;
   text-transform: uppercase;
-  background-color: #26A69A;
+  background-color: #26a69a;
   font-weight: 500 !important;
   border: 0;
 }
@@ -845,10 +845,10 @@ fieldset[disabled] .btn-link:focus {
   color: #ffffff;
   text-decoration: none;
   outline: 0;
-  background-color: #51ca59;
+  background-color: #009688;
 }
 .dropdown-menu {
-  background: #fff;
+  background: #ffffff;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   border: 0px transparent;
   border-radius: 0px;
@@ -857,10 +857,12 @@ fieldset[disabled] .btn-link:focus {
 .dropdown-menu > .active > a:hover,
 .dropdown-menu > .active > a:focus {
   background-color: #009688;
-  color: #fff;
+  color: #ffffff;
 }
-.dropdown-menu > li > a:hover {
-  color: #fff;
+.dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+  color: #ffffff;
+  background-color: #009688;
 }
 /* Navs */
 .nav-pills > li {
@@ -992,10 +994,6 @@ a.list-group-item.active:focus .list-group-item-text {
   float: none;
   text-align: center;
 }
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus {
-  background-color: #26A69A;
-}
 .frontpage-splash {
   background-image: none !important;
 }
@@ -1020,7 +1018,7 @@ a.list-group-item.active:focus .list-group-item-text {
   font-size: 1.5em;
   font-weight: 500;
   text-shadow: none;
-  color: #26A69A;
+  color: #009688;
   padding-top: 0;
 }
 /*# sourceMappingURL=materialcraft.css.map */
