--- a/less/modules/minecraftmarket.less
+++ b/less/modules/minecraftmarket.less
@@ -40,3 +40,30 @@
     color: @logo-color;
     padding-top: 0;
 }
+@media (max-width: 992px) {
+  .header .logo {
+    float: none;
+    text-align: center;
+  }
+  .header .store-controls {
+    float: none;
+    text-align: center;
+  }
+  .navbar {
+    margin-top: 15px;
+  }
+}
+.navbar {
+  min-height: 60px;
+}
+@media (min-width: 992px) {
+  .navbar-nav > li > a {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+
+.navbar-toggle {
+  margin-top: 13px;
+  margin-bottom: 13px;
+}
