--- a/materialcraft.css
+++ b/materialcraft.css
@@ -460,12 +460,12 @@ fieldset[disabled] .btn-danger.active {
   padding: 6px 0px;
   font-size: 14px;
   line-height: 1.42857143;
-  color: #555;
+  color: #555555;
   background-color: transparent;
   border-top: 0px;
   background-image: none;
   border: 0px solid transparent;
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #cccccc;
   border-radius: 0px;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -1020,5 +1020,31 @@ a.list-group-item.active:focus .list-group-item-text {
   text-shadow: none;
   color: #009688;
   padding-top: 0;
+}
+@media (max-width: 992px) {
+  .header .logo {
+    float: none;
+    text-align: center;
+  }
+  .header .store-controls {
+    float: none;
+    text-align: center;
+  }
+  .navbar {
+    margin-top: 15px;
+  }
+}
+.navbar {
+  min-height: 60px;
+}
+@media (min-width: 992px) {
+  .navbar-nav > li > a {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
+.navbar-toggle {
+  margin-top: 13px;
+  margin-bottom: 13px;
 }
 /*# sourceMappingURL=materialcraft.css.map */
