--- a/less/modules/panels.less
+++ b/less/modules/panels.less
@@ -3,7 +3,6 @@
   background: #fff;
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 	border: 0px solid transparent;
-	border-radius: 2px;
 }
 .panel .panel-heading {
   color: @panel-header-color;
@@ -11,4 +10,6 @@
   background-color: @panel-header;
   font-weight: 500 !important;
   border: 0;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
