Update dark style

--- a/less/variables_dark.less
+++ b/less/variables_dark.less
@@ -12,7 +12,7 @@
 @online-status-color: #4CAF50;
 @offline-status-bg: #fff;
 @offline-status-color: #e51c23;
-@dropdown-hover-bg: @navbar-bg;
+@dropdown-hover-bg: #444;
 @dropdown-hover-color: #fff;
 @dropdown-menu-bg: #fff;
 @progress: @navbar-bg;
