Fix input-group button

--- a/less/modules/inputs_buttons.less
+++ b/less/modules/inputs_buttons.less
@@ -15,6 +15,7 @@ font-weight: 700;
 font-size: 16px;
 text-transform: uppercase;
 transition:color 1s ease;
+border: 0;
 }
 .input-group .btn-success:hover,
 .input-group .btn-success:focus {
@@ -30,6 +31,7 @@ font-weight: 700;
 font-size: 16px;
 text-transform: uppercase;
 transition:color 1s ease;
+border: 0;
 }
 .input-group .btn-primary:hover,
 .input-group .btn-primary:focus {
