--- a/less/modules/inputs_buttons.less
+++ b/less/modules/inputs_buttons.less
@@ -253,3 +253,7 @@ input[type="checkbox"]:disabled:checked:after,
 .checkbox-inline label {
   padding-left: 25px;
 }
+.input-lg {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
