--- a/less/modules/minecraftmarket.less
+++ b/less/modules/minecraftmarket.less
@@ -50,7 +50,7 @@
     text-align: center;
   }
   .navbar {
-    margin-top: 15px;
+    margin-top: 85px;
   }
 }
 .navbar {
@@ -71,4 +71,22 @@
 .list-group-item {
   background: #fff !important;
   color: #333 !important;
+}
+.header > .logo img {
+    display: block;
+    max-height: 90px;
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    position: static;
+    margin: auto;
+    margin-bottom: 35px;
+}
+.frontpage-splash {
+  margin-bottom: 40px;
+  display: block;
+  position: static;
+}
+.store-controls {
+  margin-bottom: 25px;
 }
