Fix currency switch and navbar

--- a/less/modules/minecraftmarket.less
+++ b/less/modules/minecraftmarket.less
@@ -50,6 +50,9 @@
     text-align: center;
   }
   .navbar {
+    margin-top: 15px;
+  }
+  .navbar-static-top {
     margin-top: 85px;
   }
 }
@@ -89,4 +92,7 @@
 }
 .store-controls {
   margin-bottom: 25px;
+}
+#currency_switcher {
+  margin-top: -2px;
 }
