--- a/themes/MaterialCraft-Purple/src/_variables.scss
+++ b/themes/MaterialCraft-Purple/src/_variables.scss
@@ -9,7 +9,7 @@ $gray:                   lighten($gray-base, 33.5%); // #555
 $gray-light:             lighten($gray-base, 46.7%); // #777
 $gray-lighter:           lighten($gray-base, 93.5%); // #eee
 
-$brand-primary:         #2196f3;
+$brand-primary:         #9C27B0;
 $brand-success:         #4caf50;
 $brand-info:            #42A5F5;
 $brand-warning:         #ff9800;
@@ -58,7 +58,7 @@ $font       : 'Roboto', sans-serif;
 $body-bg    : #eee;
 $text-color : #333;
 $font-size  : 14px;
-$navbar-bg  : #2196F3;
+$navbar-bg  : #9C27B0;
 $logo-color: $navbar-bg;
 $panel-header : $navbar-bg;
 $panel-header-color: #fff;
