--- a/themes/MaterialCraft/src/_components.scss
+++ b/themes/MaterialCraft/src/_components.scss
@@ -8,5 +8,6 @@
 @import "components/links";
 @import "components/dropdowns";
 @import "components/navs";
+@import "components/pagination";
 @import "components/progress";
 @import "components/minecraftmarket";
