--- a/themes/MaterialCraft/src/components/_labels.scss
+++ b/themes/MaterialCraft/src/components/_labels.scss
@@ -16,9 +16,11 @@
 
 .label-primary {
   background-color: #51ca59;
-}
 
-.label-primary[href]:hover,
-.label-primary[href]:focus {
-  background-color: #36b23e;
+  &[href] {
+    &:hover,
+    &:focus {
+      background-color: #36b23e;
+    }
+  }
 }
