--- a/themes/MaterialCraft-Red/src/materialcraft.scss
+++ b/themes/MaterialCraft-Red/src/materialcraft.scss
@@ -1,10 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
 
-/*!
- * MaterialCraft 3.0.0 (https://github.com/rodymol123/MaterialCraft)
- * Copyright 2015-2016 Xtrada Design
- * Licensed under MIT (http://opensource.org/licenses/MIT)
- */
+@import "../../MaterialCraft/src/version";
 
 @import "variables";
 @import "../../MaterialCraft/src/mixins";
