--- a/themes/MaterialCraft/src/_variables.scss
+++ b/themes/MaterialCraft/src/_variables.scss
@@ -119,3 +119,14 @@ $link-color:            $brand-primary;
 $link-hover-color:      darken($link-color, 15%);
 //** Link hover decoration.
 $link-hover-decoration: underline;
+
+//** Placeholder text color
+$input-color-placeholder:        #999;
+//** Text color for `<input>`s
+$input-color:                    $gray;
+//** `<input>` border color
+$input-border:                   #ccc;
+//** Background color for textual input addons
+$input-group-addon-bg:           $gray-lighter;
+//** Border color for textual input addons
+$input-group-addon-border-color: $input-border;
