--- a/themes/MaterialCraft/src/components/_dropdowns.scss
+++ b/themes/MaterialCraft/src/components/_dropdowns.scss
@@ -2,29 +2,32 @@
 // Dropdowns
 // --------------------------------------------------
 
-.dropdown-menu > .active > a,
-.dropdown-menu > .active > a:hover,
-.dropdown-menu > .active > a:focus {
-  color: $dropdown-hover-color;
-  text-decoration: none;
-  outline: 0;
-  background-color: $dropdown-hover-bg;
-}
-
 .dropdown-menu {
   background: $dropdown-menu-bg;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
-  border: 0px transparent;
-  border-radius: 0px;
-}
+  border: 0 transparent;
+  border-radius: 0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, .3);
 
-.dropdown-menu > .active > a, .dropdown-menu > .active > a:hover, .dropdown-menu > .active > a:focus {
-  background-color: $dropdown-hover-bg;
-  color: $dropdown-hover-color;
-}
+  & li {
+    > a {
+      &:hover,
+      &:focus {
+        background-color: $dropdown-hover-bg;
+        color: $dropdown-hover-color;
+        outline: none;
+      }
+    }
+  }
 
-.dropdown-menu > li > a:hover,
-.dropdown-menu > li > a:focus {
-  color: $dropdown-hover-color;
-  background-color: $dropdown-hover-bg;
+  > .active {
+    > a {
+      &,
+      &:hover,
+      &:focus {
+        background-color: $dropdown-hover-bg;
+        color: $dropdown-hover-color;
+        outline: none;
+      }
+    }
+  }
 }
