--- a/themes/MaterialCraft/src/components/_inputs_buttons.scss
+++ b/themes/MaterialCraft/src/components/_inputs_buttons.scss
@@ -14,39 +14,41 @@
   border-bottom-color: #fff;
 }
 
-.input-group .btn-success {
-  background: transparent !important;
-  color: $brand-success;
-  font-weight: 700;
-  font-size: 16px;
-  text-transform: uppercase;
-  transition: color 1s ease;
-  border: 0;
-}
+.input-group {
 
-.input-group .btn-success:hover,
-.input-group .btn-success:focus {
-  background: transparent !important;
-  color: darken($brand-success, 3%);
-  -webkit-box-shadow: none;
-  box-shadow: none;
-}
+  & .btn-success {
+    background: transparent !important;
+    color: $brand-success;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    transition: color 1s ease;
+    border: 0;
 
-.input-group .btn-primary {
-  background: transparent !important;
-  color: $brand-primary;
-  font-weight: 700;
-  font-size: 16px;
-  text-transform: uppercase;
-  transition: color 1s ease;
-  border: 0;
-}
+    &:hover,
+    &:focus {
+      background: transparent !important;
+      color: darken($brand-success, 3%);
+      box-shadow: none;
+    }
+  }
 
-.input-group .btn-primary:hover,
-.input-group .btn-primary:focus {
-  background: transparent !important;
-  color: darken($brand-primary, 3%);
-  box-shadow: none;
+  .btn-primary {
+    background: transparent !important;
+    color: $brand-primary;
+    font-weight: 700;
+    font-size: 16px;
+    text-transform: uppercase;
+    transition: color 1s ease;
+    border: 0;
+
+    &:hover,
+    &:focus {
+      background: transparent !important;
+      box-shadow: none;
+      color: darken($brand-primary, 3%);
+    }
+  }
 }
 
 .input-lg {
@@ -67,209 +69,202 @@
   border: 0px solid transparent;
   border-bottom: 2px solid $form-control;
   border-radius: 0px;
-  -webkit-box-shadow: none;
   box-shadow: none;
+
+  &:focus {
+    border-color: $form-control-focus;
+    outline: 0;
+    box-shadow: none;
+  }
+
+  @include placeholder;
 }
 
-.form-control:focus {
-  border-color: $form-control-focus;
-  outline: 0;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
+.radio,
+.radio-inline,
+.checkbox,
+.checkbox-inline {
+  label {
+    padding-left: 25px;
+  }
 
-.form-control::-moz-placeholder {
-  color: #999;
-  opacity: 1;
-}
-
-.form-control:-ms-input-placeholder {
-  color: #999;
-}
-
-.form-control::-webkit-input-placeholder {
-  color: #999;
-}
-
-.input-group-addon {
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 1;
-  color: #555;
-  text-align: center;
-  background-color: transparent;
-  border: none;
-  border-radius: 0px;
+  input[type="radio"],
+  input[type="checkbox"] {
+    margin-left: -25px;
+  }
 }
 
 input[type="radio"],
 .radio input[type="radio"],
 .radio-inline input[type="radio"] {
-  margin-top: 5px;
-  margin-left: -25px;
+  position: relative;
+  margin-top: 6px;
+  margin-right: 4px;
+  vertical-align: top;
   border: none;
   background-color: transparent;
   -webkit-appearance: none;
   appearance: none;
   cursor: pointer;
-}
 
-input[type="radio"]:focus,
-.radio input[type="radio"]:focus,
-.radio-inline input[type="radio"]:focus {
-  outline: none;
-}
+  &:focus {
+    outline: none;
+  }
 
-input[type="radio"]:before,
-.radio input[type="radio"]:before,
-.radio-inline input[type="radio"]:before,
-input[type="radio"]:after,
-.radio input[type="radio"]:after,
-.radio-inline input[type="radio"]:after {
-  content: "";
-  display: block;
-  width: 18px;
-  height: 18px;
-  margin-top: -3px;
-  border-radius: 50%;
-  transition: 240ms;
-}
+  &:before,
+  &:after {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    @include transition(240ms);
+  }
 
-input[type="radio"]:before,
-.radio input[type="radio"]:before,
-.radio-inline input[type="radio"]:before {
-  position: absolute;
-  left: 0;
-  top: 8px;
-  background-color: #009688;
-  transform: scale(0);
-}
+  &:before {
+    position: absolute;
+    left: 0;
+    top: -3px;
+    background-color: $brand-primary;
+    @include scale(0);
+  }
 
-input[type="radio"]:after,
-.radio input[type="radio"]:after,
-.radio-inline input[type="radio"]:after {
-  border: 2px solid #666666;
-}
+  &:after {
+    position: relative;
+    top: -3px;
+    border: 2px solid $gray;
+  }
 
-input[type="radio"]:checked:before,
-.radio input[type="radio"]:checked:before,
-.radio-inline input[type="radio"]:checked:before {
-  transform: scale(0.5);
-}
+  &:checked:before {
+    @include scale(0.5);
+  }
 
-input[type="radio"]:disabled:checked:before,
-.radio input[type="radio"]:disabled:checked:before,
-.radio-inline input[type="radio"]:disabled:checked:before {
-  background-color: #bbbbbb;
-}
+  &:disabled:checked:before {
+    background-color: $gray-light;
+  }
 
-input[type="radio"]:checked:after,
-.radio input[type="radio"]:checked:after,
-.radio-inline input[type="radio"]:checked:after {
-  border-color: #009688;
-}
+  &:checked:after {
+    border-color: $brand-primary;
+  }
 
-input[type="radio"]:disabled:after,
-.radio input[type="radio"]:disabled:after,
-.radio-inline input[type="radio"]:disabled:after,
-input[type="radio"]:disabled:checked:after,
-.radio input[type="radio"]:disabled:checked:after,
-.radio-inline input[type="radio"]:disabled:checked:after {
-  border-color: #bbbbbb;
+  &:disabled:after,
+  &:disabled:checked:after {
+    border-color: $gray-light;
+  }
 }
 
 input[type="checkbox"],
 .checkbox input[type="checkbox"],
 .checkbox-inline input[type="checkbox"] {
-  margin-left: -25px;
+  position: relative;
   border: none;
+  margin-bottom: -4px;
+  -webkit-appearance: none;
   appearance: none;
   cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus:after {
+    border-color: $brand-primary;
+  }
+
+  &:after {
+    content: "";
+    display: block;
+    width: 18px;
+    height: 18px;
+    margin-top: -2px;
+    margin-right: 5px;
+    border: 2px solid $gray;
+    border-radius: 2px;
+    @include transition(240ms);
+  }
+
+  &:checked:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 6px;
+    display: table;
+    width: 6px;
+    height: 12px;
+    border: 2px solid #fff;
+    border-top-width: 0;
+    border-left-width: 0;
+    @include rotate(45deg);
+  }
+
+  &:checked:after {
+    background-color: $brand-primary;
+    border-color: $brand-primary;
+  }
+
+  &:disabled:after {
+    border-color: $gray-light;
+  }
+
+  &:disabled:checked:after {
+    background-color: $gray-light;
+    border-color: transparent;
+  }
 }
 
-input[type="checkbox"]:focus,
-.checkbox input[type="checkbox"]:focus,
-.checkbox-inline input[type="checkbox"]:focus {
-  outline: none;
+.has-warning {
+  input:not([type=checkbox]),
+  .form-control,
+  input.form-control[readonly],
+  input[type=text][readonly],
+  [type=text].form-control[readonly],
+  input:not([type=checkbox]):focus,
+  .form-control:focus {
+    border-bottom: none;
+    @include box-shadow(inset 0 -2px 0 $brand-warning);
+  }
 }
 
-input[type="checkbox"]:after,
-.checkbox input[type="checkbox"]:after,
-.checkbox-inline input[type="checkbox"]:after {
-  content: "";
-  display: block;
-  width: 18px;
-  height: 18px;
-  margin-top: -2px;
-  margin-right: 5px;
-  border: 2px solid #666666;
-  border-radius: 2px;
-  transition: 240ms;
+.has-error {
+  input:not([type=checkbox]),
+  .form-control,
+  input.form-control[readonly],
+  input[type=text][readonly],
+  [type=text].form-control[readonly],
+  input:not([type=checkbox]):focus,
+  .form-control:focus {
+    border-bottom: none;
+    @include box-shadow(inset 0 -2px 0 $brand-danger);
+  }
 }
 
-input[type="checkbox"]:checked:before,
-.checkbox input[type="checkbox"]:checked:before,
-.checkbox-inline input[type="checkbox"]:checked:before {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 21px;
-  display: table;
-  width: 6px;
-  height: 12px;
-  border: 2px solid #fff;
-  border-top-width: 0;
-  border-left-width: 0;
-  transform: rotate(45deg);
-}
-input[type="checkbox"]:checked:after,
-.checkbox input[type="checkbox"]:checked:after,
-.checkbox-inline input[type="checkbox"]:checked:after {
-  background-color: $form-control-focus;
-  border-color: $form-control-focus;
+.has-success {
+  input:not([type=checkbox]),
+  .form-control,
+  input.form-control[readonly],
+  input[type=text][readonly],
+  [type=text].form-control[readonly],
+  input:not([type=checkbox]):focus,
+  .form-control:focus {
+    border-bottom: none;
+    @include box-shadow(inset 0 -2px 0 $brand-success);
+  }
 }
 
-input[type="checkbox"]:disabled:after,
-.checkbox input[type="checkbox"]:disabled:after,
-.checkbox-inline input[type="checkbox"]:disabled:after {
-  border-color: #bbbbbb;
+// Remove the Bootstrap feedback styles for input addons
+.input-group-addon {
+  .has-warning &, .has-error &, .has-success & {
+    color: $input-color;
+    border-color: $input-group-addon-border-color;
+    background-color: $input-group-addon-bg;
+  }
 }
 
-input[type="checkbox"]:disabled:checked:after,
-.checkbox input[type="checkbox"]:disabled:checked:after,
-.checkbox-inline input[type="checkbox"]:disabled:checked:after {
-  background-color: #bbbbbb;
-  border-color: transparent;
-}
-
-.has-warning input:not([type=checkbox]),
-.has-warning .form-control,
-.has-warning input:not([type=checkbox]):focus,
-.has-warning .form-control:focus {
-  -webkit-box-shadow: inset 0 -2px 0 $brand-warning;
-  box-shadow: inset 0 -2px 0 $brand-warning;
-}
-
-.has-error input:not([type=checkbox]),
-.has-error .form-control,
-.has-error input:not([type=checkbox]):focus,
-.has-error .form-control:focus {
-  box-shadow: inset 0 -2px 0 $brand-danger;
-}
-
-.has-success input:not([type=checkbox]),
-.has-success .form-control,
-.has-success input:not([type=checkbox]):focus,
-.has-success .form-control:focus {
-  box-shadow: inset 0 -2px 0 $brand-success;
-}
-
-.radio label,
-.radio-inline label,
-.checkbox label,
-.checkbox-inline label {
-  padding-left: 25px;
+.form-group-lg {
+  select,
+  select.form-control {
+    line-height: 1.5;
+  }
 }
 
 .input-lg {
