--- a/themes/MaterialCraft/src/components/_modals.scss
+++ b/themes/MaterialCraft/src/components/_modals.scss
@@ -23,10 +23,12 @@
   border-radius: 0px;
 }
 
-.close,
-.close:hover,
-.close:focus,
-.close:active {
-  opacity: 0.7;
-  color: #fff;
+.close {
+  &,
+  &:hover,
+  &:focus,
+  &:active {
+    opacity: 0.7;
+    color: #fff;
+  }
 }
