--- a/themes/MaterialCraft/src/components/_navs.scss
+++ b/themes/MaterialCraft/src/components/_navs.scss
@@ -2,63 +2,67 @@
 // Navs
 // --------------------------------------------------
 
-.nav-pills > li {
-  float: left;
+.nav-pills {
+  > li {
+    float: left;
+
+    > a {
+      border-radius: 4px;
+    }
+
+    + li {
+      margin-left: 2px;
+    }
+
+    & .active {
+      > a {
+        &,
+        &:hover,
+        &:focus {
+          color: #ffffff;
+          background-color: $brand-primary;
+
+          & .caret {
+            border-top-color: #ffffff;
+            border-bottom-color: #ffffff;
+          }
+        }
+      }
+    }
+  }
 }
 
-.nav-pills > li > a {
-  border-radius: 4px;
-}
+a {
+  & .list-group-item {
+    color: #555555;
 
-.nav-pills > li + li {
-  margin-left: 2px;
-}
+    &:hover,
+    &:focus {
+      text-decoration: none;
+      background-color: #f5f5f5;
+    }
 
-.nav-pills > li.active > a,
-.nav-pills > li.active > a:hover,
-.nav-pills > li.active > a:focus {
-  color: #ffffff;
-  background-color: #51ca59;
-}
+    & .active {
+      &,
+      &:hover,
+      &:focus {
+        z-index: 2;
+        color: #ffffff;
+        background-color: $brand-primary;
+        border-color: $brand-primary;
 
-.nav-pills > li.active > a .caret,
-.nav-pills > li.active > a:hover .caret,
-.nav-pills > li.active > a:focus .caret {
-  border-top-color: #ffffff;
-  border-bottom-color: #ffffff;
-}
+        & .list-group-item-heading {
+          color: inherit;
+        }
 
-a.list-group-item {
-  color: #555555;
-}
+        & .list-group-item-text {
+          color: #edfaee;
+        }
+      }
+    }
 
-a.list-group-item .list-group-item-heading {
-  color: #333333;
-}
-
-a.list-group-item:hover,
-a.list-group-item:focus {
-  text-decoration: none;
-  background-color: #f5f5f5;
-}
-
-a.list-group-item.active,
-a.list-group-item.active:hover,
-a.list-group-item.active:focus {
-  z-index: 2;
-  color: #ffffff;
-  background-color: #51ca59;
-  border-color: #51ca59;
-}
-
-a.list-group-item.active .list-group-item-heading,
-a.list-group-item.active:hover .list-group-item-heading,
-a.list-group-item.active:focus .list-group-item-heading {
-  color: inherit;
-}
-
-a.list-group-item.active .list-group-item-text,
-a.list-group-item.active:hover .list-group-item-text,
-a.list-group-item.active:focus .list-group-item-text {
-  color: #edfaee;
+    & .list-group-item-heading {
+      color: #333333;
+    }
+  }
 }
