--- a/themes/MaterialCraft/src/_variables.scss
+++ b/themes/MaterialCraft/src/_variables.scss
@@ -53,7 +53,7 @@ $caret-width-large:         5px;
 //** Disabled cursor for form controls and buttons.
 $cursor-disabled:                not-allowed;
 
-/* Specify basic styles */
+//** Specify basic styles 
 $font: 'Roboto', sans-serif;
 $body-bg: #eee;
 $text-color: #333;
