--- a/themes/MaterialCraft/src/components/_dropdowns.scss
+++ b/themes/MaterialCraft/src/components/_dropdowns.scss
@@ -1,6 +1,8 @@
-//
-// Dropdowns
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Dropdowns
+* --------------------------------------------------
+*/
 
 .dropdown-menu {
   background: $dropdown-menu-bg;
