--- a/themes/MaterialCraft/src/components/_inputs_buttons.scss
+++ b/themes/MaterialCraft/src/components/_inputs_buttons.scss
@@ -1,6 +1,8 @@
-//
-// Inputs & Buttons
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Inputs & Buttons
+* --------------------------------------------------
+*/
 
 .input-group-btn .fa-arrow-right {
   display: none;
