--- a/themes/MaterialCraft/src/components/_minecraftmarket.scss
+++ b/themes/MaterialCraft/src/components/_minecraftmarket.scss
@@ -1,6 +1,8 @@
-//
-// Minecraft Market Specifics
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* MinecraftMarket Specifics
+* --------------------------------------------------
+*/
 
 .category-item-name {
   display: block;
