--- a/themes/MaterialCraft/src/components/_modals.scss
+++ b/themes/MaterialCraft/src/components/_modals.scss
@@ -1,6 +1,8 @@
-//
-// Modals
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Modals
+* --------------------------------------------------
+*/
 
 .modal-header,
 .modal-body,
