--- a/themes/MaterialCraft/src/components/_navbar.scss
+++ b/themes/MaterialCraft/src/components/_navbar.scss
@@ -1,6 +1,8 @@
-//
-// Navbar
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Navbar
+* --------------------------------------------------
+*/
 
 .navbar-default {
   background-color: $navbar-bg;
