--- a/themes/MaterialCraft/src/components/_navs.scss
+++ b/themes/MaterialCraft/src/components/_navs.scss
@@ -1,6 +1,8 @@
-//
-// Navs
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Navs
+* --------------------------------------------------
+*/
 
 .nav-pills {
   > li {
