--- a/themes/MaterialCraft/src/components/_pagination.scss
+++ b/themes/MaterialCraft/src/components/_pagination.scss
@@ -1,6 +1,8 @@
-//
-// Pagination
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Pagination
+* --------------------------------------------------
+*/
 
 .pagination {
   display: inline-block;
