--- a/themes/MaterialCraft/src/components/_progress.scss
+++ b/themes/MaterialCraft/src/components/_progress.scss
@@ -1,14 +1,17 @@
-//
-// Progress
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Progress
+* --------------------------------------------------
+*/
 
 .progress-bar {
   background-color: $progress;
 }
 
-// ===============================
-// Removes the donation value text
-// ===============================
+/* ===============================
+*  Removes the donation value text
+*  ===============================
+*/
 
 .donation-goal p,
 .store-goal span {
@@ -19,4 +22,4 @@
   margin-top: 0 !important;
 }
 
-// -------------------------------
+/* ------------------------------- */
