--- a/themes/MaterialCraft/src/components/_utilities.scss
+++ b/themes/MaterialCraft/src/components/_utilities.scss
@@ -1,6 +1,8 @@
-//
-// Utilities
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Utilities
+* --------------------------------------------------
+*/
 
 .text-primary {
   color: $brand-primary;
