--- a/themes/MaterialCraft/src/components/_buttons.scss
+++ b/themes/MaterialCraft/src/components/_buttons.scss
@@ -1,7 +1,8 @@
-//
-// Buttons
-// --------------------------------------------------
-
+/*!
+* --------------------------------------------------
+* Buttons
+* --------------------------------------------------
+*/
 
 // Base styles
 // --------------------------------------------------
