--- a/themes/MaterialCraft/src/components/_labels.scss
+++ b/themes/MaterialCraft/src/components/_labels.scss
@@ -1,6 +1,8 @@
-//
-// Labels
-// --------------------------------------------------
+/*
+* --------------------------------------------------
+* Label
+* --------------------------------------------------
+*/
 
 .label-success {
   background-color: $online-status-bg;
