--- a/themes/MaterialCraft/src/components/_links.scss
+++ b/themes/MaterialCraft/src/components/_links.scss
@@ -1,6 +1,8 @@
-//
-// Links
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Links
+* --------------------------------------------------
+*/
 
 a {
   color: #384783;
