--- a/themes/MaterialCraft/src/components/_panels.scss
+++ b/themes/MaterialCraft/src/components/_panels.scss
@@ -1,6 +1,8 @@
-//
-// Panels
-// --------------------------------------------------
+/*!
+* --------------------------------------------------
+* Panels
+* --------------------------------------------------
+*/
 
 .panel {
   background: #fff;
