--- a/themes/MaterialCraft/src/materialcraft.scss
+++ b/themes/MaterialCraft/src/materialcraft.scss
@@ -1,4 +1,4 @@
-@import url("http://fonts.googleapis.com/css?family=Roboto:400,500,700");
+@import url("//fonts.googleapis.com/css?family=Roboto:400,500,700");
 
 @import "version";
 
