--- a/src/MaterialCraft/components/_dropdowns.scss
+++ b/src/MaterialCraft/components/_dropdowns.scss
@@ -26,8 +26,8 @@
       &,
       &:hover,
       &:focus {
-        background-color: $dropdown-hover-bg;
-        color: $dropdown-hover-color;
+        background-color: $dropdown-active-bg;
+        color: $dropdown-active-color;
         outline: none;
       }
     }
