--- a/src/MaterialCraft/components/_modals.scss
+++ b/src/MaterialCraft/components/_modals.scss
@@ -17,15 +17,24 @@
   color: $modal-header-color;
   box-shadow: 0px 2px 2px 0px rgba(50, 50, 50, 0.24);
   min-height: 16.42857143px;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
 .modal-content {
   background-color: #ffffff;
   border: 0px transparent;
-  border-radius: 0px;
+}
+
+.modal-footer {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
 
 .close {
+
+  margin: 0 !important;
+
   &,
   &:hover,
   &:focus,
