--- a/src/MaterialCraft/components/_utilities.scss
+++ b/src/MaterialCraft/components/_utilities.scss
@@ -20,3 +20,52 @@
 img {
   max-width: 100%;
 }
+
+.category {
+
+  & .packages-image {
+
+    margin: 0;
+
+    & .package {
+
+      margin: 0;
+      padding: 15px;
+      border-radius: 4px;
+      margin-bottom: 15px;
+
+      &:hover,
+      &:focus {
+        background: #eee;
+      }
+
+      & .info {
+
+        & .text {
+          width: 100%;
+          height: 40px;
+          float: none;
+          padding-right: 0;
+          text-align: center;
+          font-size: $font-size;
+          margin-bottom: 10px;
+
+          & .name,
+          & .price {
+            display: block;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+          }
+        }
+
+        & .button {
+          float: none;
+          width: 42%;
+          margin-left: auto;
+          margin-right: auto;
+        }
+      }
+    }
+  }
+}
