Buycraft header fix and bigger buy buttons

--- a/src/MaterialCraft/components/_utilities.scss
+++ b/src/MaterialCraft/components/_utilities.scss
@@ -61,7 +61,7 @@ img {
 
         & .button {
           float: none;
-          width: 42%;
+          width: auto;
           margin-left: auto;
           margin-right: auto;
         }
