--- a/src/MaterialCraft/components/_minecraftmarket.scss
+++ b/src/MaterialCraft/components/_minecraftmarket.scss
@@ -20,6 +20,10 @@
   display: block;
   float: none;
   text-align: center;
+
+  > a {
+    display: block;
+  }
 }
 
 .frontpage-splash {
@@ -27,6 +31,47 @@
   margin-bottom: 40px;
   display: block;
   position: static;
+
+  > .header {
+
+    > .store-controls {
+      background: transparent;
+      padding: 0;
+      margin-bottom: 25px;
+
+      @media (max-width: 992px) {
+        float: none;
+        text-align: center;
+      }
+    }
+
+    > .logo {
+      float: left;
+      height: 100%;
+      position: relative;
+      font-size: 1.5em;
+      font-weight: 500;
+      text-shadow: none;
+      color: $logo-color;
+      padding-top: 0;
+
+      @media (max-width: 992px) {
+        float: none;
+        text-align: center;
+      }
+
+      img {
+        display: block;
+        max-height: 90px;
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        position: static;
+        margin: auto;
+        margin-bottom: 35px;
+      }
+    }
+  }
 }
 
 .jumbotron {
@@ -39,47 +84,6 @@
 
 .navbar {
   border-radius: 4px;
-}
-
-.header {
-
-  > .store-controls {
-    background: transparent;
-    padding: 0;
-    margin-bottom: 25px;
-
-    @media (max-width: 992px) {
-      float: none;
-      text-align: center;
-    }
-  }
-
-  > .logo {
-    float: left;
-    height: 100%;
-    position: relative;
-    font-size: 1.5em;
-    font-weight: 500;
-    text-shadow: none;
-    color: $logo-color;
-    padding-top: 0;
-
-    @media (max-width: 992px) {
-      float: none;
-      text-align: center;
-    }
-
-    img {
-      display: block;
-      max-height: 90px;
-      max-width: 100%;
-      width: auto;
-      height: auto;
-      position: static;
-      margin: auto;
-      margin-bottom: 35px;
-    }
-  }
 }
 
 .navbar {
@@ -131,7 +135,7 @@
 
 .category-image-item {
   border-radius: 4px;
-  
+
   &:hover,
   &:focus {
     background: #eee;
